@@ -1,0 +1,15 @@
+<table cellpadding="4" cellspacing="0">
+<tr class="bgcolor1">
+   <td width="20%">{RESET_BOXES}</td><td>{RESET_DESC}</td>
+</tr>
+<tr>
+   <td>{MOVE_BOXES}</td><td>{MOVE_BOXES_DESC}</td>
+</tr>
+<tr class="bgcolor1">
+   <td>{CLEAR_TEMPLATES}</td><td>{CLEAR_TEMPLATES_DESC}</td>
+</tr>
+<tr>
+   <td>{CLEAR_CACHE}</td><td>{CLEAR_CACHE_DESC}</td>
+</tr>
+
+</table>
